2003-01-28  Jody Goldberg <jody@gnome.org>

	* Release 1.1.16

2003-01-21  Jon K Hellan  <hellan@acm.org>

	* html_read.c (html_append_text): New function. Append text to
	buffer, normalizing all sequences of whitespace to a single space.
	(html_read_content): Use html_append_text instead of htmlNodeDump
	for content. Make content buffer a GString.
	(html_read_row):  Make content buffer a GString.

2003-01-17  Jon K Hellan  <hellan@acm.org>

	* html_read.c (html_file_open): Skip byte order mark. Arguably,
	this is libxml2's job.

2003-01-16  Jon K Hellan  <hellan@acm.org>

	(html_read_table): Take two.

2003-01-16  Jon K Hellan  <hellan@acm.org>

	* html_read.c (struct GnmHtmlTableCtxt): Add. Keep state while
	traversing thead, tfoot, tbody parts.
	(html_read_row): Replace row and sheet parameters with a
	GnmHtmlTableCtxt.
	(html_read_rows): Add. Read rows in a row group (thead, tfoot,
	tbody or plain table).
	(html_read_table): Replace row and sheet with a
	GnmHtmlTableCtxt. Call html_read_rows to read rows groupwise.

2003-01-14  Morten Welinder  <terra@diku.dk>

	* html.c (html_get_color): Adapt to cell_get_render_color changes.
	* latex.c (latex2e_write_multicolumn_cell): Ditto.

2002-12-31  Jody Goldberg <jody@gnome.org>

	* Release 1.1.15

2002-12-22  Jody Goldberg <jody@gnome.org>

	* Release 1.1.14

2002-12-22  Jody Goldberg <jody@gnome.org>

	* Release 1.1.13

2002-11-29  Jody Goldberg <jody@gnome.org>

	* roff.c (roff_file_save) : const the view and include gsf-output.h

	* latex.c (latex_file_save) : const the view.

	* html.c : include gsf-output.h and remove some vacuous comments.
	(html_write_cell_content) : remove trailing argument from a puts.
	(html_file_save) : const the view.
	(html40_file_save) : ditto.
	(html32_file_save) : ditto.
	(html40frag_file_save) : ditto.
	(xhtml_file_save) : ditto.

2002-11-28  Jon K Hellan  <hellan@acm.org>

	* html.[ch] (html40_file_save, html32_file_save) 